Website: Complete upstream provider docs
This completes the documentation for the current state of the provider,
making it ready for submission upstream.

All changes will be frozen on the provider until this happens.
Realistically though this should not take too much longer now that this
is complete.

--- a/website/acme.erb
+++ b/website/acme.erb
@@ -31,6 +31,93 @@
             <li<%= sidebar_current("docs-acme-dns-providers-auroradns") %>>
               <a href="/docs/providers/acme/dns_providers/auroradns.html">auroradns</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-bluecat") %>>
+              <a href="/docs/providers/acme/dns_providers/bluecat.html">bluecat</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-cloudflare") %>>
+              <a href="/docs/providers/acme/dns_providers/cloudflare.html">cloudflare</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-cloudxns") %>>
+              <a href="/docs/providers/acme/dns_providers/cloudxns.html">cloudxns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-digitalocean") %>>
+              <a href="/docs/providers/acme/dns_providers/digitalocean.html">digitalocean</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-dnsimple") %>>
+              <a href="/docs/providers/acme/dns_providers/dnsimple.html">dnsimple</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-dnsmadeeasy") %>>
+              <a href="/docs/providers/acme/dns_providers/dnsmadeeasy.html">dnsmadeeasy</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-dnspod") %>>
+              <a href="/docs/providers/acme/dns_providers/dnspod.html">dnspod</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-duckdns") %>>
+              <a href="/docs/providers/acme/dns_providers/duckdns.html">duckdns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-dyn") %>>
+              <a href="/docs/providers/acme/dns_providers/dyn.html">dyn</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-exec") %>>
+              <a href="/docs/providers/acme/dns_providers/exec.html">exec</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-exoscale") %>>
+              <a href="/docs/providers/acme/dns_providers/exoscale.html">exoscale</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-fastdns") %>>
+              <a href="/docs/providers/acme/dns_providers/fastdns.html">fastdns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-gandi") %>>
+              <a href="/docs/providers/acme/dns_providers/gandi.html">gandi</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-v5-gandi") %>>
+              <a href="/docs/providers/acme/dns_providers/gandiv5.html">gandiv5</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-glesys") %>>
+              <a href="/docs/providers/acme/dns_providers/glesys.html">glesys</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-gcloud") %>>
+              <a href="/docs/providers/acme/dns_providers/gcloud.html">gcloud</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-godaddy") %>>
+              <a href="/docs/providers/acme/dns_providers/godaddy.html">godaddy</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-lightsail") %>>
+              <a href="/docs/providers/acme/dns_providers/lightsail.html">lightsail</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-linode") %>>
+              <a href="/docs/providers/acme/dns_providers/linode.html">linode</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-namecheap") %>>
+              <a href="/docs/providers/acme/dns_providers/namecheap.html">namecheap</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-namedotcom") %>>
+              <a href="/docs/providers/acme/dns_providers/namedotcom.html">namedotcom</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-ns1") %>>
+              <a href="/docs/providers/acme/dns_providers/ns1.html">ns1</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-otc") %>>
+              <a href="/docs/providers/acme/dns_providers/otc.html">otc</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-ovh") %>>
+              <a href="/docs/providers/acme/dns_providers/ovh.html">ovh</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-pdns") %>>
+              <a href="/docs/providers/acme/dns_providers/pdns.html">pdns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-rackspace") %>>
+              <a href="/docs/providers/acme/dns_providers/rackspace.html">rackspace</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-rfc2136") %>>
+              <a href="/docs/providers/acme/dns_providers/rfc2136.html">rfc2136</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-route53") %>>
+              <a href="/docs/providers/acme/dns_providers/route53.html">route53</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-vultr") %>>
+              <a href="/docs/providers/acme/dns_providers/vultr.html">vultr</a>
+            </li>
           </ul>
         </li>
       </ul>
