website: add dns providers

--- a/website/acme.erb
+++ b/website/acme.erb
@@ -25,11 +25,17 @@
         <li<%= sidebar_current("docs-acme-dns-providers") %>>
           <a href="/docs/providers/acme/dns_providers/index.html">DNS Providers</a>
           <ul class="nav nav-visible">
-            <li<%= sidebar_current("docs-acme-dns-providers-azure") %>>
-              <a href="/docs/providers/acme/dns_providers/azure.html">azure</a>
+            <li<%= sidebar_current("docs-acme-dns-providers-acmedns") %>>
+              <a href="/docs/providers/acme/dns_providers/acmedns.html">acmedns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-alidns") %>>
+              <a href="/docs/providers/acme/dns_providers/alidns.html">alidns</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-auroradns") %>>
               <a href="/docs/providers/acme/dns_providers/auroradns.html">auroradns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-azure") %>>
+              <a href="/docs/providers/acme/dns_providers/azure.html">azure</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-bluecat") %>>
               <a href="/docs/providers/acme/dns_providers/bluecat.html">bluecat</a>
@@ -52,6 +58,9 @@
             <li<%= sidebar_current("docs-acme-dns-providers-dnspod") %>>
               <a href="/docs/providers/acme/dns_providers/dnspod.html">dnspod</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-dreamhost") %>>
+              <a href="/docs/providers/acme/dns_providers/dreamhost.html">dreamhost</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-duckdns") %>>
               <a href="/docs/providers/acme/dns_providers/duckdns.html">duckdns</a>
             </li>
@@ -73,14 +82,20 @@
             <li<%= sidebar_current("docs-acme-dns-providers-v5-gandi") %>>
               <a href="/docs/providers/acme/dns_providers/gandiv5.html">gandiv5</a>
             </li>
-            <li<%= sidebar_current("docs-acme-dns-providers-glesys") %>>
-              <a href="/docs/providers/acme/dns_providers/glesys.html">glesys</a>
-            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-gcloud") %>>
               <a href="/docs/providers/acme/dns_providers/gcloud.html">gcloud</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-glesys") %>>
+              <a href="/docs/providers/acme/dns_providers/glesys.html">glesys</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-godaddy") %>>
               <a href="/docs/providers/acme/dns_providers/godaddy.html">godaddy</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-hostingde") %>>
+              <a href="/docs/providers/acme/dns_providers/hostingde.html">hostingde</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-iij") %>>
+              <a href="/docs/providers/acme/dns_providers/iij.html">iij</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-lightsail") %>>
               <a href="/docs/providers/acme/dns_providers/lightsail.html">lightsail</a>
@@ -88,11 +103,20 @@
             <li<%= sidebar_current("docs-acme-dns-providers-linode") %>>
               <a href="/docs/providers/acme/dns_providers/linode.html">linode</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-v4-linode") %>>
+              <a href="/docs/providers/acme/dns_providers/linodev4.html">linodev4</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-namecheap") %>>
               <a href="/docs/providers/acme/dns_providers/namecheap.html">namecheap</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-namedotcom") %>>
               <a href="/docs/providers/acme/dns_providers/namedotcom.html">namedotcom</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-netcup") %>>
+              <a href="/docs/providers/acme/dns_providers/netcup.html">netcup</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-nifcloud") %>>
+              <a href="/docs/providers/acme/dns_providers/nifcloud.html">nifcloud</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-ns1") %>>
               <a href="/docs/providers/acme/dns_providers/ns1.html">ns1</a>
@@ -114,6 +138,15 @@
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-route53") %>>
               <a href="/docs/providers/acme/dns_providers/route53.html">route53</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-sakuracloud") %>>
+              <a href="/docs/providers/acme/dns_providers/sakuracloud.html">sakuracloud</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-stackpath") %>>
+              <a href="/docs/providers/acme/dns_providers/stackpath.html">stackpath</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-vegadns") %>>
+              <a href="/docs/providers/acme/dns_providers/vegadns.html">vegadns</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-vultr") %>>
               <a href="/docs/providers/acme/dns_providers/vultr.html">vultr</a>
