Add tuning option documentation to existing DNS providers
This adds the tuning options (and the rare additional optional setting)
available within the latest version of lego to the documentation for the
existing DNS providers.

The options were fetched from "lego dnshelp", looking at the additional
option section.

--- a/website/acme.erb
+++ b/website/acme.erb
@@ -46,6 +46,12 @@
             <li<%= sidebar_current("docs-acme-dns-providers-cloudxns") %>>
               <a href="/docs/providers/acme/dns_providers/cloudxns.html">cloudxns</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-conoha") %>>
+              <a href="/docs/providers/acme/dns_providers/conoha.html">conoha</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-designate") %>>
+              <a href="/docs/providers/acme/dns_providers/designate.html">designate</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-digitalocean") %>>
               <a href="/docs/providers/acme/dns_providers/digitalocean.html">digitalocean</a>
             </li>
@@ -94,8 +100,14 @@
             <li<%= sidebar_current("docs-acme-dns-providers-hostingde") %>>
               <a href="/docs/providers/acme/dns_providers/hostingde.html">hostingde</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-httpreq") %>>
+              <a href="/docs/providers/acme/dns_providers/httpreq.html">httpreq</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-iij") %>>
               <a href="/docs/providers/acme/dns_providers/iij.html">iij</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-inwx") %>>
+              <a href="/docs/providers/acme/dns_providers/inwx.html">inwx</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-lightsail") %>>
               <a href="/docs/providers/acme/dns_providers/lightsail.html">lightsail</a>
@@ -105,6 +117,9 @@
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-v4-linode") %>>
               <a href="/docs/providers/acme/dns_providers/linodev4.html">linodev4</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-mydnsjp") %>>
+              <a href="/docs/providers/acme/dns_providers/mydnsjp.html">mydnsjp</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-namecheap") %>>
               <a href="/docs/providers/acme/dns_providers/namecheap.html">namecheap</a>
@@ -142,14 +157,26 @@
             <li<%= sidebar_current("docs-acme-dns-providers-sakuracloud") %>>
               <a href="/docs/providers/acme/dns_providers/sakuracloud.html">sakuracloud</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-selectel") %>>
+              <a href="/docs/providers/acme/dns_providers/selectel.html">selectel</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-stackpath") %>>
               <a href="/docs/providers/acme/dns_providers/stackpath.html">stackpath</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-transip") %>>
+              <a href="/docs/providers/acme/dns_providers/transip.html">transip</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-vegadns") %>>
               <a href="/docs/providers/acme/dns_providers/vegadns.html">vegadns</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-vscale") %>>
+              <a href="/docs/providers/acme/dns_providers/vscale.html">vscale</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-vultr") %>>
               <a href="/docs/providers/acme/dns_providers/vultr.html">vultr</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-zoneee") %>>
+              <a href="/docs/providers/acme/dns_providers/zoneee.html">zoneee</a>
             </li>
           </ul>
         </li>
