Re-generate documentation

--- a/website/acme.erb
+++ b/website/acme.erb
@@ -31,8 +31,14 @@
             <li<%= sidebar_current("docs-acme-dns-providers-alidns") %>>
               <a href="/docs/providers/acme/dns_providers/alidns.html">alidns</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-arvancloud") %>>
+              <a href="/docs/providers/acme/dns_providers/arvancloud.html">arvancloud</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-auroradns") %>>
               <a href="/docs/providers/acme/dns_providers/auroradns.html">auroradns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-autodns") %>>
+              <a href="/docs/providers/acme/dns_providers/autodns.html">autodns</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-azure") %>>
               <a href="/docs/providers/acme/dns_providers/azure.html">azure</a>
@@ -42,6 +48,12 @@
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-bluecat") %>>
               <a href="/docs/providers/acme/dns_providers/bluecat.html">bluecat</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-checkdomain") %>>
+              <a href="/docs/providers/acme/dns_providers/checkdomain.html">checkdomain</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-clouddns") %>>
+              <a href="/docs/providers/acme/dns_providers/clouddns.html">clouddns</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-cloudflare") %>>
               <a href="/docs/providers/acme/dns_providers/cloudflare.html">cloudflare</a>
@@ -54,6 +66,12 @@
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-conoha") %>>
               <a href="/docs/providers/acme/dns_providers/conoha.html">conoha</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-constellix") %>>
+              <a href="/docs/providers/acme/dns_providers/constellix.html">constellix</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-desec") %>>
+              <a href="/docs/providers/acme/dns_providers/desec.html">desec</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-designate") %>>
               <a href="/docs/providers/acme/dns_providers/designate.html">designate</a>
@@ -82,17 +100,20 @@
             <li<%= sidebar_current("docs-acme-dns-providers-dyn") %>>
               <a href="/docs/providers/acme/dns_providers/dyn.html">dyn</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-dynu") %>>
+              <a href="/docs/providers/acme/dns_providers/dynu.html">dynu</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-easydns") %>>
               <a href="/docs/providers/acme/dns_providers/easydns.html">easydns</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-edgedns") %>>
+              <a href="/docs/providers/acme/dns_providers/edgedns.html">edgedns</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-exec") %>>
               <a href="/docs/providers/acme/dns_providers/exec.html">exec</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-exoscale") %>>
               <a href="/docs/providers/acme/dns_providers/exoscale.html">exoscale</a>
-            </li>
-            <li<%= sidebar_current("docs-acme-dns-providers-fastdns") %>>
-              <a href="/docs/providers/acme/dns_providers/fastdns.html">fastdns</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-gandi") %>>
               <a href="/docs/providers/acme/dns_providers/gandi.html">gandi</a>
@@ -109,11 +130,17 @@
             <li<%= sidebar_current("docs-acme-dns-providers-godaddy") %>>
               <a href="/docs/providers/acme/dns_providers/godaddy.html">godaddy</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-hetzner") %>>
+              <a href="/docs/providers/acme/dns_providers/hetzner.html">hetzner</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-hostingde") %>>
               <a href="/docs/providers/acme/dns_providers/hostingde.html">hostingde</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-httpreq") %>>
               <a href="/docs/providers/acme/dns_providers/httpreq.html">httpreq</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-hyperone") %>>
+              <a href="/docs/providers/acme/dns_providers/hyperone.html">hyperone</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-iij") %>>
               <a href="/docs/providers/acme/dns_providers/iij.html">iij</a>
@@ -130,14 +157,17 @@
             <li<%= sidebar_current("docs-acme-dns-providers-linode") %>>
               <a href="/docs/providers/acme/dns_providers/linode.html">linode</a>
             </li>
-            <li<%= sidebar_current("docs-acme-dns-providers-linodev4") %>>
-              <a href="/docs/providers/acme/dns_providers/linodev4.html">linodev4</a>
-            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-liquidweb") %>>
               <a href="/docs/providers/acme/dns_providers/liquidweb.html">liquidweb</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-luadns") %>>
+              <a href="/docs/providers/acme/dns_providers/luadns.html">luadns</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-mydnsjp") %>>
               <a href="/docs/providers/acme/dns_providers/mydnsjp.html">mydnsjp</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-mythicbeasts") %>>
+              <a href="/docs/providers/acme/dns_providers/mythicbeasts.html">mythicbeasts</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-namecheap") %>>
               <a href="/docs/providers/acme/dns_providers/namecheap.html">namecheap</a>
@@ -150,6 +180,9 @@
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-netcup") %>>
               <a href="/docs/providers/acme/dns_providers/netcup.html">netcup</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-netlify") %>>
+              <a href="/docs/providers/acme/dns_providers/netlify.html">netlify</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-nifcloud") %>>
               <a href="/docs/providers/acme/dns_providers/nifcloud.html">nifcloud</a>
@@ -172,8 +205,14 @@
             <li<%= sidebar_current("docs-acme-dns-providers-rackspace") %>>
               <a href="/docs/providers/acme/dns_providers/rackspace.html">rackspace</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-regru") %>>
+              <a href="/docs/providers/acme/dns_providers/regru.html">regru</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-rfc2136") %>>
               <a href="/docs/providers/acme/dns_providers/rfc2136.html">rfc2136</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-rimuhosting") %>>
+              <a href="/docs/providers/acme/dns_providers/rimuhosting.html">rimuhosting</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-route53") %>>
               <a href="/docs/providers/acme/dns_providers/route53.html">route53</a>
@@ -181,8 +220,14 @@
             <li<%= sidebar_current("docs-acme-dns-providers-sakuracloud") %>>
               <a href="/docs/providers/acme/dns_providers/sakuracloud.html">sakuracloud</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-scaleway") %>>
+              <a href="/docs/providers/acme/dns_providers/scaleway.html">scaleway</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-selectel") %>>
               <a href="/docs/providers/acme/dns_providers/selectel.html">selectel</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-servercow") %>>
+              <a href="/docs/providers/acme/dns_providers/servercow.html">servercow</a>
             </li>
             <li<%= sidebar_current("docs-acme-dns-providers-stackpath") %>>
               <a href="/docs/providers/acme/dns_providers/stackpath.html">stackpath</a>
@@ -202,8 +247,14 @@
             <li<%= sidebar_current("docs-acme-dns-providers-vultr") %>>
               <a href="/docs/providers/acme/dns_providers/vultr.html">vultr</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-yandex") %>>
+              <a href="/docs/providers/acme/dns_providers/yandex.html">yandex</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-zoneee") %>>
               <a href="/docs/providers/acme/dns_providers/zoneee.html">zoneee</a>
+            </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-zonomi") %>>
+              <a href="/docs/providers/acme/dns_providers/zonomi.html">zonomi</a>
             </li>
           </ul>
         </li>
