modules: update to lego v4.1.0
Particular changes we need are go-acme/lego#1283 (Post-as-GET, so that
we can test with pebble), and go-acme/lego#1279 (requested fix for the
Designate provider).

Fixes #128.

--- a/website/acme.erb
+++ b/website/acme.erb
@@ -145,6 +145,9 @@
             <li<%= sidebar_current("docs-acme-dns-providers-iij") %>>
               <a href="/docs/providers/acme/dns_providers/iij.html">iij</a>
             </li>
+            <li<%= sidebar_current("docs-acme-dns-providers-infomaniak") %>>
+              <a href="/docs/providers/acme/dns_providers/infomaniak.html">infomaniak</a>
+            </li>
             <li<%= sidebar_current("docs-acme-dns-providers-inwx") %>>
               <a href="/docs/providers/acme/dns_providers/inwx.html">inwx</a>
             </li>
